--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
+    "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.16",
     "@mui/x-data-grid": "^7.3.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,8 +15,9 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.0-beta.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
